--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,12 +7,13 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg"
     tools:context="com.loc8r.biketrack.LoginActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="7"/>
+        android:layout_weight="6"/>
 
     <Button
         android:id="@+id/login"
