--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,13 +15,19 @@
         android:layout_height="0dp"
         android:layout_weight="6"/>
 
-    <Button
-        android:id="@+id/login"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/signinbutton"
-        android:onClick="loginWithGoogle"
-        />
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@android:color/transparent"
+            android:onClick="loginWithGoogle"/>
+    </RelativeLayout>
 
     <Space
         android:layout_width="match_parent"
